Pokemon battle updated, battle movements defined out of the Pokemon instance

--- a/Python/Games/Challenge_pokemon_battle_4.ipynb
+++ b/Python/Games/Challenge_pokemon_battle_4.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "id": "FPq5h3LeMaPh"
    },
@@ -186,12 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "id": "F53Ah1TSzhX1"
    },
    "outputs": [],
    "source": [
+    "pistola_de_agua = Movements(\"pistola de agua\", 15, \"agua\")\n",
+    "tackle = Movements(\"tackle\", 10, \"normal\")\n",
+    "ascuas = Movements(\"ascuas\",15, \"fuego\")\n",
+    "latigo_cepa = Movements(\"latigo cepa\", 15, \"planta\")\n",
+    "impactrueno = Movements (\"impactrueno\", 15,\"electrico\")\n",
+    "tornado = Movements (\"tornado\", 15,\"volador\")\n",
+    "\n",
     "squirtle = Pokemon(\n",
     "    especie = \"Squirtle\",\n",
     "    tipo = \"agua\",\n",
@@ -201,8 +208,8 @@
     "    velocidad = 43,\n",
     "    fortalezas = [\"fuego\"],\n",
     "    debilidades = [\"planta\", \"electrico\"],\n",
-    "    movimientos = {\"pistola de agua\" : Movements(\"pistola de agua\", 15, \"agua\"), \n",
-    "                   \"tackle\" : Movements(\"tackle\", 10, \"normal\")}\n",
+    "    movimientos = {\"pistola de agua\" : pistola_de_agua, \n",
+    "                   \"tackle\" : tackle}\n",
     ")\n",
     "\n",
     "charmander = Pokemon(\n",
@@ -214,8 +221,8 @@
     "    velocidad = 65,\n",
     "    fortalezas = [\"planta\"],\n",
     "    debilidades = [\"agua\"],\n",
-    "    movimientos = {\"ascuas\": Movements(\"ascuas\",15, \"fuego\"),\n",
-    "                \"tackle\": Movements (\"tackle\", 10,\"normal\")}\n",
+    "    movimientos = {\"ascuas\": ascuas,\n",
+    "                \"tackle\": tackle}\n",
     ")\n",
     "\n",
     "bulbasaur = Pokemon(\n",
@@ -228,8 +235,8 @@
     "    fortalezas = [\"agua\", \"electrico\"],\n",
     "    debilidades = [\"fuego\", \"volador\"],\n",
     "    movimientos = {\n",
-    "    \"latigo cepa\": Movements(\"latigo cepa\", 15, \"planta\"),\n",
-    "    \"tackle\": Movements(\"tackle\", 10, \"normal\")}\n",
+    "    \"latigo cepa\": latigo_cepa,\n",
+    "    \"tackle\": tackle}\n",
     ")\n",
     "\n",
     "pikachu = Pokemon(\n",
@@ -242,8 +249,8 @@
     "    fortalezas = [\"agua\", \"volador\"],\n",
     "    debilidades = [\"tierra\"],\n",
     "    movimientos = {\n",
-    "    \"impactrueno\": Movements (\"impactrueno\", 15,\"electrico\"),\n",
-    "    \"tackle\": Movements (\"tackle\", 10, \"normal\")}\n",
+    "    \"impactrueno\": impactrueno,\n",
+    "    \"tackle\": tackle}\n",
     ")\n",
     "\n",
     "pidgey = Pokemon(\n",
@@ -256,14 +263,14 @@
     "    fortalezas = [\"planta\"],\n",
     "    debilidades = [\"electrico\"],\n",
     "    movimientos = {\n",
-    "    \"tornado\": Movements (\"tornado\", 15,\"volador\"),\n",
-    "    \"tackle\": Movements (\"tackle\", 10, \"normal\")}\n",
+    "    \"tornado\": tornado,\n",
+    "    \"tackle\": tackle}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,26 +291,25 @@
       "Ascuas\n",
       "Tackle\n",
       "\n",
-      "ascuas\n",
+      "tackle\n",
       "\n",
-      "Has elegido ascuas.\n",
+      "Has elegido tackle.\n",
       "\n",
-      "15\n",
       "\n",
-      "El daño que puede causar es 12.0 \n",
+      "El daño que puede causar es 8.0 \n",
       "\n",
-      "El real que causará según las debilidades y fortalezas es 6 \n",
+      "El real que causará según las debilidades y fortalezas es 8 \n",
       "\n",
-      "Charmander ha hecho 6 puntos de daño \n",
+      "Charmander ha hecho 8 puntos de daño \n",
       "\n",
-      "A Squirtle le quedan 38 puntos de vida\n",
+      "A Squirtle le quedan 36 puntos de vida\n",
       "\n",
       "\n",
       "ROUND # 2\n",
       "\n",
       "Vida de Charmander = 39 \n",
       "\n",
-      "Vida de Squirtle = 38\n",
+      "Vida de Squirtle = 36\n",
       "\n",
       "------------SQUIRTLE ATACA ------------\n",
       "\n",
@@ -332,7 +338,7 @@
       "\n",
       "Vida de Charmander = 6 \n",
       "\n",
-      "Vida de Squirtle = 38\n",
+      "Vida de Squirtle = 36\n",
       "\n",
       "------------CHARMANDER ATACA------------\n",
       "\n",
@@ -341,17 +347,16 @@
       "Ascuas\n",
       "Tackle\n",
       "\n",
-      "tackle\n",
+      "ascuas\n",
       "\n",
-      "Has elegido tackle.\n",
+      "Has elegido ascuas.\n",
       "\n",
-      "10\n",
       "\n",
-      "El daño que puede causar es 8.0 \n",
+      "El daño que puede causar es 12.0 \n",
       "\n",
-      "El real que causará según las debilidades y fortalezas es 8 \n",
+      "El real que causará según las debilidades y fortalezas es 6 \n",
       "\n",
-      "Charmander ha hecho 8 puntos de daño \n",
+      "Charmander ha hecho 6 puntos de daño \n",
       "\n",
       "A Squirtle le quedan 30 puntos de vida\n",
       "\n",
@@ -371,18 +376,18 @@
       "Tackle\n",
       "\n",
       "\n",
-      "pistola de agua\n",
+      "tackle\n",
       "\n",
-      "Has elegido pistola de agua.\n",
+      "Has elegido tackle.\n",
       "\n",
       "\n",
-      "El daño que puede causar es 16.74418604651163 \n",
+      "El daño que puede causar es 11.162790697674419 \n",
       "\n",
-      "El real que causará según las debilidades y fortalezas es 33 \n",
+      "El real que causará según las debilidades y fortalezas es 11 \n",
       "\n",
-      "Squirtle ha hecho 33 puntos de daño\n",
+      "Squirtle ha hecho 11 puntos de daño\n",
       "\n",
-      "A Charmander le quedan -27 puntos de vida\n",
+      "A Charmander le quedan -5 puntos de vida\n",
       "\n",
       "¡Charmander se ha desmayado! Squirtle ha ganado el combate.\n",
       "\n"
@@ -395,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +492,6 @@
       "\n",
       "Has elegido latigo cepa.\n",
       "\n",
-      "15\n",
       "\n",
       "El daño que puede causar es 11.307692307692307 \n",
       "\n",
@@ -513,25 +517,193 @@
       "Tackle\n",
       "\n",
       "\n",
+      "pistola de agua\n",
+      "\n",
+      "Has elegido pistola de agua.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 14.693877551020408 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Squirtle ha hecho 7 puntos de daño\n",
+      "\n",
+      "A Bulbasaur le quedan 38 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 3\n",
+      "\n",
+      "Vida de Bulbasaur = 38 \n",
+      "\n",
+      "Vida de Squirtle = 22\n",
+      "\n",
+      "------------BULBASAUR ATACA------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Latigo Cepa\n",
+      "Tackle\n",
+      "\n",
       "tackle\n",
       "\n",
       "Has elegido tackle.\n",
       "\n",
       "\n",
-      "El daño que puede causar es 9.795918367346939 \n",
+      "El daño que puede causar es 7.538461538461538 \n",
       "\n",
-      "El real que causará según las debilidades y fortalezas es 9 \n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
       "\n",
-      "Squirtle ha hecho 9 puntos de daño\n",
+      "Bulbasaur ha hecho 7 puntos de daño \n",
       "\n",
-      "A Bulbasaur le quedan 36 puntos de vida\n",
+      "A Squirtle le quedan 15 puntos de vida\n",
       "\n",
       "\n",
-      "ROUND # 3\n",
+      "ROUND # 4\n",
       "\n",
-      "Vida de Bulbasaur = 36 \n",
+      "Vida de Bulbasaur = 38 \n",
       "\n",
-      "Vida de Squirtle = 22\n",
+      "Vida de Squirtle = 15\n",
+      "\n",
+      "------------SQUIRTLE ATACA ------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Pistola De Agua\n",
+      "\n",
+      "Tackle\n",
+      "\n",
+      "\n",
+      "pistola de agua\n",
+      "\n",
+      "Has elegido pistola de agua.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 14.693877551020408 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Squirtle ha hecho 7 puntos de daño\n",
+      "\n",
+      "A Bulbasaur le quedan 31 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 5\n",
+      "\n",
+      "Vida de Bulbasaur = 31 \n",
+      "\n",
+      "Vida de Squirtle = 15\n",
+      "\n",
+      "------------BULBASAUR ATACA------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Latigo Cepa\n",
+      "Tackle\n",
+      "\n",
+      "tackle\n",
+      "\n",
+      "Has elegido tackle.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 7.538461538461538 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Bulbasaur ha hecho 7 puntos de daño \n",
+      "\n",
+      "A Squirtle le quedan 8 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 6\n",
+      "\n",
+      "Vida de Bulbasaur = 31 \n",
+      "\n",
+      "Vida de Squirtle = 8\n",
+      "\n",
+      "------------SQUIRTLE ATACA ------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Pistola De Agua\n",
+      "\n",
+      "Tackle\n",
+      "\n",
+      "\n",
+      "pistola de agua\n",
+      "\n",
+      "Has elegido pistola de agua.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 14.693877551020408 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Squirtle ha hecho 7 puntos de daño\n",
+      "\n",
+      "A Bulbasaur le quedan 24 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 7\n",
+      "\n",
+      "Vida de Bulbasaur = 24 \n",
+      "\n",
+      "Vida de Squirtle = 8\n",
+      "\n",
+      "------------BULBASAUR ATACA------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Latigo Cepa\n",
+      "Tackle\n",
+      "\n",
+      "tackle\n",
+      "\n",
+      "Has elegido tackle.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 7.538461538461538 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Bulbasaur ha hecho 7 puntos de daño \n",
+      "\n",
+      "A Squirtle le quedan 1 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 8\n",
+      "\n",
+      "Vida de Bulbasaur = 24 \n",
+      "\n",
+      "Vida de Squirtle = 1\n",
+      "\n",
+      "------------SQUIRTLE ATACA ------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Pistola De Agua\n",
+      "\n",
+      "Tackle\n",
+      "\n",
+      "\n",
+      "pistola de agua\n",
+      "\n",
+      "Has elegido pistola de agua.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 14.693877551020408 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 7 \n",
+      "\n",
+      "Squirtle ha hecho 7 puntos de daño\n",
+      "\n",
+      "A Bulbasaur le quedan 17 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 9\n",
+      "\n",
+      "Vida de Bulbasaur = 17 \n",
+      "\n",
+      "Vida de Squirtle = 1\n",
       "\n",
       "------------BULBASAUR ATACA------------\n",
       "\n",
@@ -544,7 +716,6 @@
       "\n",
       "Has elegido latigo cepa.\n",
       "\n",
-      "15\n",
       "\n",
       "El daño que puede causar es 11.307692307692307 \n",
       "\n",
@@ -552,7 +723,7 @@
       "\n",
       "Bulbasaur ha hecho 22 puntos de daño \n",
       "\n",
-      "A Squirtle le quedan 0 puntos de vida\n",
+      "A Squirtle le quedan -21 puntos de vida\n",
       "\n",
       "¡Squirtle se ha desmayado! Bulbasaur ha ganado el combate.\n",
       "\n"
@@ -565,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,23 +769,23 @@
       "Tackle\n",
       "\n",
       "\n",
-      "ascuas\n",
+      "tackle\n",
       "\n",
-      "Has elegido ascuas.\n",
+      "Has elegido tackle.\n",
       "\n",
       "\n",
-      "El daño que puede causar es 15.918367346938776 \n",
+      "El daño que puede causar es 10.612244897959185 \n",
       "\n",
-      "El real que causará según las debilidades y fortalezas es 31 \n",
+      "El real que causará según las debilidades y fortalezas es 10 \n",
       "\n",
-      "Charmander ha hecho 31 puntos de daño\n",
+      "Charmander ha hecho 10 puntos de daño\n",
       "\n",
-      "A Bulbasaur le quedan 14 puntos de vida\n",
+      "A Bulbasaur le quedan 35 puntos de vida\n",
       "\n",
       "\n",
       "ROUND # 2\n",
       "\n",
-      "Vida de Bulbasaur = 14 \n",
+      "Vida de Bulbasaur = 35 \n",
       "\n",
       "Vida de Charmander = 39\n",
       "\n",
@@ -629,7 +800,6 @@
       "\n",
       "Has elegido latigo cepa.\n",
       "\n",
-      "15\n",
       "\n",
       "El daño que puede causar es 17.093023255813954 \n",
       "\n",
@@ -642,7 +812,7 @@
       "\n",
       "ROUND # 3\n",
       "\n",
-      "Vida de Bulbasaur = 14 \n",
+      "Vida de Bulbasaur = 35 \n",
       "\n",
       "Vida de Charmander = 31\n",
       "\n",
@@ -666,7 +836,63 @@
       "\n",
       "Charmander ha hecho 31 puntos de daño\n",
       "\n",
-      "A Bulbasaur le quedan -17 puntos de vida\n",
+      "A Bulbasaur le quedan 4 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 4\n",
+      "\n",
+      "Vida de Bulbasaur = 4 \n",
+      "\n",
+      "Vida de Charmander = 31\n",
+      "\n",
+      "------------BULBASAUR ATACA------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Latigo Cepa\n",
+      "Tackle\n",
+      "\n",
+      "tackle\n",
+      "\n",
+      "Has elegido tackle.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 11.395348837209303 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 11 \n",
+      "\n",
+      "Bulbasaur ha hecho 11 puntos de daño \n",
+      "\n",
+      "A Charmander le quedan 20 puntos de vida\n",
+      "\n",
+      "\n",
+      "ROUND # 5\n",
+      "\n",
+      "Vida de Bulbasaur = 4 \n",
+      "\n",
+      "Vida de Charmander = 20\n",
+      "\n",
+      "------------CHARMANDER ATACA ------------\n",
+      "\n",
+      "¿Qué tipo de ataque quieres? \n",
+      "\n",
+      "Ascuas\n",
+      "\n",
+      "Tackle\n",
+      "\n",
+      "\n",
+      "ascuas\n",
+      "\n",
+      "Has elegido ascuas.\n",
+      "\n",
+      "\n",
+      "El daño que puede causar es 15.918367346938776 \n",
+      "\n",
+      "El real que causará según las debilidades y fortalezas es 31 \n",
+      "\n",
+      "Charmander ha hecho 31 puntos de daño\n",
+      "\n",
+      "A Bulbasaur le quedan -27 puntos de vida\n",
       "\n",
       "¡Bulbasaur se ha desmayado! Charmander ha ganado el combate.\n",
       "\n"
@@ -679,13 +905,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "bulbasaur.centro_pokemon()\n",
     "charmander.centro_pokemon()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
